--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,6 +121,13 @@ button.main,
     border: 1px solid #bae6fd; /* Subtle border for definition */
 }
 
+.sweet-hr {
+    width: 100%;
+    border: none;
+    margin-block: 1rem;
+    border-bottom: 1px dashed gainsboro;
+}
+
 // =============================
 // Material Design Components
 // =============================
